--- a/index.html
+++ b/index.html
@@ -9,11 +9,17 @@
   <style>
     body {
       margin-top:10%;
+
+      /* display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh; */
     }
     .badge
     {
       font-size: 110%;
       background-color: #337AB7;
+      line-height: 140%;
     }
 
   </style>
@@ -21,11 +27,11 @@
 <body>
 
   <div class="container">
-    <div class="row">
+    <!-- <div class="row"> -->
       <div class="text-center">
         <h3>Amirreza's tools to help study 日本語</h3>
-        <a class="badge" href="verbforms_index.html">➡️ Verb form conversion quiz (Vます, Vる, Vない, Vて, Vた)</a>
-      </div>
+        <a class="badge" href="verbforms_index.html">➡️ Verb form conversion quiz <br>(Vます, Vる, Vない, Vて, Vた)</a>
+      <!-- </div> -->
   </div>
 
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
