add a python script to convert csv to readable data afor the webpage in a dirty way :3

--- a/verbforms_index.html
+++ b/verbforms_index.html
@@ -87,7 +87,7 @@
 
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <script src="verbforms_data.js"></script>
+  <script src="data_converted.js"></script>
   <script src="verbforms_script.js"></script>
   <script>
     displayRandomVerb();
